--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,2 @@
-<div class="p-4 bg-background text-text min-h-screen">
-  <h1 class="text-2xl font-bold">Projeto RPGPlace</h1>
-  <p class="mt-2">Bem-vindo à sua aplicação.</p>
-
-  <div class="mt-4">
-    <button (click)="toggleTheme()" class="bg-primary text-white font-bold py-2 px-4 rounded">
-      Trocar Tema
-    </button>
-    <p class="mt-2">Tema atual: {{ theme() }}</p>
-  </div>
-
-</div>
+<app-header></app-header>
 <router-outlet></router-outlet>
