change start command and add service methods

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="bg-background text-text flex-grow">
+  <app-header></app-header>
+  <main class="flex-grow">
+    <router-outlet></router-outlet>
+  </main>
+</div>
