--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,9 +1,11 @@
-<div class="flex flex-col items-center justify-center h-screen text-center bg-background text-text">
-  <h1 class="text-4xl font-bold">Welcome to RPGPlace</h1>
-  <p class="mt-4 text-lg">Your place to create and manage your RPG campaigns.</p>
-  <div class="mt-8">
-    <a routerLink="/register" class="px-6 py-3 font-medium text-white bg-primary rounded-md hover:bg-primary-dark">Get Started</a>
-    <a routerLink="/login" class="ml-4 px-6 py-3 font-medium text-primary bg-transparent border border-primary rounded-md hover:bg-gray-100">Login</a>
+<div class="flex flex-col h-full mt-[20vh]">
+  <div class="flex flex-col items-center justify-center flex-grow text-center text-text my-auto">
+    <h1 class="text-4xl font-bold">Welcome to RPGPlace</h1>
+    <p class="mt-4 text-lg">Your place to create and manage your RPG campaigns.</p>
+    <div class="mt-8">
+      <a routerLink="/register" class="px-6 py-3 font-medium text-white bg-primary rounded-md hover:bg-primary-dark">Get Started</a>
+      <a routerLink="/login" class="ml-4 px-6 py-3 font-medium text-primary bg-transparent border border-primary rounded-md hover:bg-gray-100">Login</a>
+    </div>
   </div>
 </div>
 
