--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -1,5 +1,5 @@
-<div class="flex items-center justify-center h-screen bg-background">
-  <div class="w-full max-w-md p-8 space-y-6 bg-surface rounded-lg shadow-md">
+<div class="flex flex-col h-full mt-[20vh]">
+  <div class="w-full max-w-md p-8 space-y-6 bg-surface rounded-lg shadow-md m-auto">
     <h1 class="text-2xl font-bold text-center text-text">Register</h1>
     <form [formGroup]="registerForm" (ngSubmit)="register()" class="space-y-6">
       <div class="form-field w-full">
