--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,11 +1,11 @@
-<header class="bg-surface text-text p-4">
+<header class="bg-surface text-text p-4 h-16">
   <div class="container mx-auto flex justify-between items-center">
     <h1 class="text-2xl font-bold">
       <a routerLink="/">RPGPlace</a>
     </h1>
     <nav class="flex items-center">
-      <ul class="flex space-x-4">
-        <li>
+      <ul class="flex space-x-4 items-center">
+        <li *ngIf="!isAuthenticated">
           <a routerLink="/">Home</a>
         </li>
         <li *ngIf="!isAuthenticated">
@@ -14,13 +14,19 @@
         <li *ngIf="!isAuthenticated">
           <a routerLink="/register">Register</a>
         </li>
-        <li *ngIf="isAuthenticated">
-          <a routerLink="/dashboard">Dashboard</a>
-        </li>
-        <li *ngIf="isAuthenticated">
-          <button (click)="logout()">Logout</button>
-        </li>
+        
       </ul>
+      <div class="relative ml-4 flex items-center" *ngIf="isAuthenticated">
+        <button (click)="toggleDropdown()" class="focus:outline-none">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-text" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </button>
+        <div *ngIf="isDropdownOpen" class="absolute right-0 top-full w-48 bg-surface rounded-md shadow-lg py-1 z-20 mr-1">
+          <a (click)="navigateToMyAccount()" class="block px-4 py-2 text-text hover:bg-background cursor-pointer">Minha Conta</a>
+          <a (click)="logout()" class="block px-4 py-2 text-text hover:bg-background cursor-pointer">Logout</a>
+        </div>
+      </div>
       <button (click)="toggleTheme()" class="ml-4">
         <svg *ngIf="theme() === 'claro'" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="currentColor" viewBox="0 0 24 24">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"/>
