--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
-<div class="bg-background text-text flex-grow">
+<div class="flex flex-col h-full bg-background text-text">
   <app-header></app-header>
-  <main class="flex-grow">
+  <main class="flex-grow overflow-y-auto">
     <router-outlet></router-outlet>
   </main>
 </div>
