--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,9 @@
   --color-text: var(--color-dark-text);
   --color-surface: var(--color-dark-surface);
 }
+
+html, body, app-root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
